set up game screen container divs in CSS

--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
     <script type="text/javascript" src="js/script.js"></script>
   </head>
   <body>
-    <main>
-      <nav>
-        <button>Start</button>
-        <button>Quit</button>
-      </nav>
-      <div class="top-half">
-        <div class="screen-container">
-          <p>Screen</p>
+    <div class="full-screen-wrapper">
+      <main>
+        <nav>
+          <button>Start</button>
+          <button>Quit</button>
+        </nav>
+        <div class="top-half">
+          <div class="screen-container">
+            <p>Screen</p>
+          </div>
         </div>
-      </div>
-      <div class="game-board">
-        <div class="color-buttons-container">
-          <ul>
-            <li><button>Red</button></li>
-            <li><button>Blue</button></li>
-            <li><button>Yellow</button></li>
-            <li><button>Green</button></li>
-            <li><button>Purple</button></li>
-            <li><button>Orange</button></li>
-          </ul>
+        <div class="game-board">
+          <div class="color-buttons-container">
+            <ul>
+              <li><button>Red</button></li>
+              <li><button>Blue</button></li>
+              <li><button>Yellow</button></li>
+              <li><button>Green</button></li>
+              <li><button>Purple</button></li>
+              <li><button>Orange</button></li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
