--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Flipando Colores</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
@@ -16,7 +17,7 @@
         </nav>
         <div class="top-half">
           <div class="screen-container">
-            <p>Screen</p>
+            <p class="screen">Screen</p>
           </div>
         </div>
         <div class="game-board">
