--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
     <div class="full-screen-wrapper">
       <main>
         <nav>
-          <button>Start</button>
+          <button id="start-button">Start</button>
           <button>Quit</button>
         </nav>
         <div class="top-half">
           <div class="screen-container">
             <p class="screen">Screen</p>
+          </div>
+          <div class="statistics">
+            <div class="timer">
+            </div>
+            <div class="scoreboard">
+            </div>
           </div>
         </div>
         <div class="game-board">
