Added score counting logic

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <div class="game-board">
           <div class="color-buttons-container">
             <ul>
-              <li><button>Red</button></li>
-              <li><button>Blue</button></li>
-              <li><button>Yellow</button></li>
-              <li><button>Green</button></li>
-              <li><button>Purple</button></li>
-              <li><button>Orange</button></li>
+              <li><button class="color-buttons" id="red">Red</button></li>
+              <li><button class="color-buttons" id="blue">Blue</button></li>
+              <li><button class="color-buttons" id="yellow">Yellow</button></li>
+              <li><button class="color-buttons" id="green">Green</button></li>
+              <li><button class="color-buttons" id="purple">Purple</button></li>
+              <li><button class="color-buttons" id="orange">Orange</button></li>
             </ul>
           </div>
         </div>
