Added number of lives display

--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
           </div>
           <div class="statistics">
             <div class="timer">
+              Time:<br><span class="time-display"></span>
             </div>
             <div class="scoreboard">
+              Score:<br><span class="score-display"></span>
+            </div>
+            <div class="health">
+              Lives:<br><span class="lives-remaining"</span>
             </div>
           </div>
         </div>
