added countdown timer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <main>
         <nav>
           <button id="start-button">Start</button>
-          <button>Quit</button>
+          <button id="quit-button">Quit</button>
         </nav>
         <div class="top-half">
           <div class="screen-container">
