formatted screen fonts

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <div class="top-half">
           <div class="screen-container">
-            <p class="screen">Screen</p>
+            <p class="screen">Game over!</p>
           </div>
           <div class="statistics">
             <div class="timer">
