--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <title>Flipando en Colores</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Lato" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </head>
   <body>
-    <div class="full-screen-wrapper">
+    <div class="welcome-screen">
+      <h1>Flipando<br>en<br>Colores</h1>
+      <button id="play">Play</button>
+    </div>
       <main>
         <nav>
           <button id="start-button">Start</button>
@@ -45,6 +49,5 @@
           </div>
         </div>
       </main>
-    </div>
   </body>
 </html>
