welcome screen animation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="welcome-screen">
-      <h1>Flipando<br>en<br>Colores</h1>
+      <h1>F<span class="first">l</span>ip<span class="second">a</span>nd<span class="fourth">o</span><br>e<span class="fifth">n</span><br>Co<span class="sixth">l</span>or<span class="seventh">e</span>s</h1>
       <button id="play">Play</button>
     </div>
       <main>
