added instructions to welcome screen

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <div class="welcome-screen">
       <h1>F<span class="first">l</span>ip<span class="second">a</span>nd<span class="fourth">o</span><br>e<span class="fifth">n</span><br>Co<span class="sixth">l</span>or<span class="seventh">e</span>s</h1>
       <button id="play">Play</button>
+      <button id="instructions-button"> Instructions</button>
+      <div class="instructions">
+        <p>When a word appears on the screen, look at the colour in which it is written. Click on the button whose writing corresponds with this colour. As you progress, the time required to make your decision decreases. Beware of distractions!</p>
+      </div>
     </div>
       <main>
         <nav>
